--- a/projects.html
+++ b/projects.html
@@ -108,7 +108,7 @@
                 
             </div>
         </section>
-        <footer class="footer text-center mt-12" id="footer">
+        <footer class="footer text-center mt-xl-12" id="footer">
             <div class="container">
                 <h4 class="text-uppercase mb-4">Let's Connect</h4>
                 <div>
