new style again lol

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&display=swap" rel="stylesheet">
         <link href="main.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
@@ -34,75 +35,19 @@
                 </div>
             </div>
         </nav>
-        <!-- Masthead-->
-        <header class="masthead text-black d-flex flex-column justify-content-center mb-5">
-            <div class="d-flex align-items-end flex-column text">
-                <h1 class="masthead-heading text-capitalize">UX Designer <span>&</span> Developer</h1>
-            </div>
-            <img class="header-img" src="assets/img/evi-radauscher-NLlvBb9sLts-unsplash.jpg" alt="Photo of a Lavendar Field, taken by Annie Spratt" />
+        <header class="masthead">
+            <h1>I'm Katie.</h1><h2> I am a UX Designer <span>&</span> Developer with 3+ years experience <span>&</span> a passion for designing <span>&</span> building beautiful, functional, <span>&</span> accessible experiences.</h2>
+            <a href="#work" class="scroll-btn js-scroll-trigger">
+                <button type="button" class="btn btn-lg button">
+                    See my work
+                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-down down-arrow" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/>
+                      </svg>
+                </button>
+            </a>
         </header>
-        <!-- About Section-->
-        <section class="page-section mb-5" id="about">
-            <!-- About Section Content-->
-            <div class="breakpoint-drop mb-4 d-flex justify-content-center">
-                <div class="col-sm-12 col-xl-5 d-flex justify-content-center">
-                    <img class="masthead-avatar portrait desktop d-none d-lg-flex" src="assets/img/Me2.png" alt="" />
-                    <img class="masthead-avatar portrait mobile d-lg-none" src="assets/img/portrait.jpg" alt="" />
-                </div>
-                <div class="col-sm-12 no-padding col-xl-5 d-flex flex-column justify-content-start pa-lg-0">
-                    <h2>I'm Katie,</h2>
-                    <p class="about-txt">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
-                    <p class="about-txt">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id perferendis corporis sit voluptatum commodi repudiandae velit ipsam beatae, deserunt voluptatibus soluta sint a unde vero necessitatibus officiis doloremque? Quisquam itaque, sunt voluptates praesentium repudiandae omnis iure labore odit numquam nam dolore alias dolorem aut architecto in tempore error eaque amet?</p>
-                    <ul class="nav nav-tabs md-tabs" id="myTabMD" role="tablist">
-                        <li class="nav-item">
-                        <a class="nav-link skills active pa-0" id="home-tab-md" data-toggle="tab" href="#ux" role="tab" aria-controls="ux"
-                            aria-selected="true">UX Skills</a>
-                        </li>
-                        <li class="nav-item">
-                        <a class="nav-link skills pa-0" id="profile-tab-md" data-toggle="tab" href="#code" role="tab" aria-controls="code"
-                            aria-selected="false">Development Skills</a>
-                        </li>
-                    </ul>
-                    <div class="tab-content card pt-3" id="myTabContentMD">
-                        <div class="tab-pane fade show active" id="ux" role="tabpanel" aria-labelledby="home-tab-md">
-                            <div class="d-flex">
-                                <ul class="list-group">
-                                    <li class="list-group-item">Cras justo odio</li>
-                                    <li class="list-group-item">Dapibus ac facilisis in</li>
-                                    <li class="list-group-item">Morbi leo risus</li>
-                                    <li class="list-group-item">Porta ac consectetur ac</li>
-                                    <li class="list-group-item">Vestibulum at eros</li>
-                                    </ul>
-                                    <ul class="list-group">
-                                    <li class="list-group-item">Cras justo odio</li>
-                                    <li class="list-group-item">Dapibus ac facilisis in</li>
-                                    <li class="list-group-item">Morbi leo risus</li>
-                                    <li class="list-group-item">Porta ac consectetur ac</li>
-                                    <li class="list-group-item">Vestibulum at eros</li>
-                                    </ul>
-                            </div>
-                        </div>
-                        <div class="tab-pane fade" id="code" role="tabpanel" aria-labelledby="profile-tab-md">
-                            <div class="d-flex">
-                                <ul class="list-group">
-                                    <li class="list-group-item">CODE</li>
-                                    <li class="list-group-item">Dapibus ac facilisis in</li>
-                                    <li class="list-group-item">Morbi leo risus</li>
-                                    <li class="list-group-item">Porta ac consectetur ac</li>
-                                    <li class="list-group-item">Vestibulum at eros</li>
-                                    </ul>
-                                    <ul class="list-group">
-                                    <li class="list-group-item">Cras justo odio</li>
-                                    <li class="list-group-item">Dapibus ac facilisis in</li>
-                                    <li class="list-group-item">Morbi leo risus</li>
-                                    <li class="list-group-item">Porta ac consectetur ac</li>
-                                    <li class="list-group-item">Vestibulum at eros</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <section class="page-section" id="work">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi possimus sed sequi ad nostrum quidem et culpa recusandae earum blanditiis temporibus asperiores rerum omnis maxime repellendus quaerat iste, praesentium quas iusto quam sint est nemo. Excepturi sequi, voluptas aperiam ut quia earum, eum quis accusantium maiores explicabo dolorum dolores vitae laboriosam animi repellendus accusamus saepe eius. Modi exercitationem quibusdam quisquam. Dolorem explicabo incidunt veritatis earum sed repellat qui minima, tempora a ullam delectus libero ipsa at nesciunt autem dolore dolorum soluta, esse veniam dicta! Reiciendis maxime quas a architecto asperiores soluta dicta nemo consequuntur. Cumque accusamus quisquam autem exercitationem, optio deleniti voluptatem magni consequatur distinctio, vel beatae animi impedit. Mollitia quam pariatur iusto deleniti eligendi veritatis facere iste esse consequuntur dolor nemo maiores, hic, doloremque distinctio expedita minima. Repellendus asperiores eligendi explicabo, recusandae quo quis commodi ducimus nesciunt deleniti cumque minus dignissimos ipsa magni fugiat repudiandae ut voluptate numquam iure fugit atque impedit eos? Dolor ex sit eligendi perferendis. Minus repellat voluptatum magni corporis dolorum inventore sint rem pariatur optio vel facere sequi, magnam, explicabo voluptatem ex voluptates consequuntur modi totam impedit! Eligendi quaerat distinctio dolorum eaque veritatis molestiae laudantium similique quibusdam nobis, excepturi fugiat perspiciatis modi commodi, minima ab numquam dolor cupiditate. Quisquam nobis amet quis possimus illo, deserunt similique iste unde consequatur? Voluptatem sint et fuga repellat delectus distinctio itaque, reiciendis commodi quod saepe quo cumque tenetur, iusto molestias dolorem fugiat ut minima sunt est eveniet ea. Accusamus, blanditiis eaque! Debitis, nobis provident ducimus excepturi deleniti error soluta. Hic maiores fugit et totam nam, adipisci, corrupti veritatis iusto quae dicta beatae doloribus laudantium saepe provident! Sapiente hic exercitationem iusto blanditiis esse, vero explicabo tenetur modi ea asperiores assumenda voluptas alias! Necessitatibus, enim non et magni esse beatae dolores reprehenderit quaerat commodi eveniet error minus. Voluptatem corrupti impedit nulla! Repellendus a amet error? Placeat suscipit amet ipsum accusamus omnis aspernatur exercitationem nulla obcaecati sapiente velit ducimus reprehenderit, fugiat quod voluptatem aperiam aliquid. Dignissimos a natus voluptatem, quaerat quam quibusdam amet rerum molestiae esse aspernatur excepturi, ad laborum facilis ipsam in labore, iusto eum ea. Debitis ab quisquam, odit hic ex aliquam temporibus aut non quam eligendi, reprehenderit molestiae. Aliquam nulla veritatis, aut, voluptas deserunt dolore molestias dolores animi dolorum est voluptatibus illum eos suscipit cumque similique debitis. Commodi et distinctio sunt minima fuga? Maiores fugiat iure quo possimus neque illum animi velit consequatur officiis illo tempora, reiciendis laborum sequi error optio debitis mollitia nostrum quos! Iusto corporis aliquid error eaque, cupiditate nam ad laudantium dolorem dolore praesentium dolores autem nulla facere hic facilis delectus fugiat ex architecto nobis fuga consequatur! Voluptatibus cupiditate amet esse quibusdam enim nisi ratione officiis minus! Cupiditate saepe totam officiis voluptate, ipsum doloribus maiores hic enim sint sed id amet quas dolor. Exercitationem, quos unde. Molestiae optio similique neque nihil, odio nam eaque omnis! Praesentium at, tenetur distinctio in maiores totam! Omnis ipsa aliquid magni culpa, debitis a accusamus optio qui temporibus et suscipit aliquam dolor exercitationem beatae aspernatur, officiis incidunt labore! Atque, modi doloremque.
         </section>
         <footer class="footer text-center" id="footer">
             <div class="container">
