--- a/instacart.html
+++ b/instacart.html
@@ -37,20 +37,26 @@
         </nav>
         <section class="page-section case-study" id="overview">
             <h1 class="mb-5">Instacart</h1>
-            <div class="overview-content d-flex">
-                <div class="main">
+            <div class="overview-content d-flex justify-content-between">
+                <div class="main col-8 p-0">
                     <h6>Overview</h6>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, perspiciatis?</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus vero omnis pariatur est. Placeat nam eius ipsam pariatur earum quis, minus animi maxime obcaecati, laboriosam aliquid aspernatur.</p>
+                    <p>
+                        Instacart is an American company that has branched out to Canadian stores, providing a grocery delivery and pick-up service. 
+                    </p>
+                    <p>
+                        This service allows customers to order groceries and other various products (depending on your geographical location and what stores are offered in that area) from participating retailers.
+                        The shopping is done by a personal shopper, then delivered to your door, or packed away at the store to await your pickup.
+                    </p>
                     <a href="https://www.figma.com/proto/gEgUFGYCJms95PQxgWbAa8/Hi-Fi?node-id=5%3A9&scaling=min-zoom" target="_blank">
                         <button type="button" class="btn button">See Prototype</button>
                     </a>
                 </div>
-                <div class="sidebar">
-                    
-                    <ul>
+                <div class="sidebar col-3 p-0">
+                    <ul class="pa-0">
                         <h6>Go To</h6>
-                        <li>background</li>
+                        <li>
+                            <a href="#background" class="js-scroll-trigger">background</a>
+                        </li>
                         <li>key findings</li>
                         <li>product vision</li>
                         <li>designs</li>
@@ -60,81 +66,101 @@
                 </div>
             </div>
         </section>
-        <section class="page-section colour-block">  
-            <div class="mx-auto">
-                <p class="quote">Here is an interesting quote about something really cool.</p>
-                <p>- Person</p>
+        <section class="page-section">  
+            <div class="text-center colour-block">
+                <h3 class="quote">Here is an interesting quote about something really cool.</h3>
             </div>
         </section>
-        <section class="page-section case-study">
-            <div class="background-content">
+        <section class="page-section">
+            <div class="background-content" id="background">
                 <h2>Background</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati modi inventore nobis magnam natus nostrum eos? Repellat ipsum, obcaecati iste dolorem animi accusamus consectetur ab, quibusdam velit, fugiat voluptatum exercitationem. Accusamus numquam voluptas est vitae hic accusantium, voluptatem consequuntur in adipisci eligendi minus omnis commodi aperiam quaerat ad nulla error?</p>
-
-                <p class="quote text-center my-3">Something especially important or interesting here.</p>
-
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi inventore quae ratione earum, provident explicabo consequatur magnam vero velit asperiores incidunt, illo voluptates eos distinctio doloribus quasi exercitationem, quam eaque!</p>
-                <ul>
-                    <li>
-                        <span class="bold">
-                            Lorem, ipsum dolor sit amet.
-                        </span>
-                        consectetur adipisicing elit. Impedit, necessitatibus.
-                    </li>
-                    <li>
-                        <span class="bold">
-                            Animi inventore quae ratione.
-                        </span>
-                        consectetur adipisicing elit. Impedit, necessitatibus.
-                    </li>
-                    <li>
-                        <span class="bold">
-                            doloribus quasi exercitationem.
-                        </span>
-                        consectetur adipisicing elit. Impedit, necessitatibus.
-                    </li>
-                    <li>
-                        <span class="bold">
-                            Lorem, ipsum dolor sit amet.
-                        </span>
-                        consectetur adipisicing elit. Impedit, necessitatibus.
-                    </li>
-                </ul>
+                <p>When I decided to do a UX case study on Instacart, my intent was to learn if individuals find the flow of <span>   research - select - buy</span> to work as expected, and in turn, uncover how/if this flow can be improved upon.</p>
+                <p>I created a Research Report outlining my methodology, participant requirements, and how I would calculate or determine my findings.</p>
+                <h3 class="quote text-center my-4">I chose to use remote, unmoderated usability testing, and the System Usability Scale to analyze my results.</h3>
+                <p>I conducted my usability testing on 6 participants - 3 who had used the app before, and 3 who had not, and had them complete a series of task-based instructions.</p>
             </div>
         </section>
-        <section class="page-section colour-block"> 
-            <div class="mx-auto">
+        <section class="page-section"> 
+            <div class="mx-auto colour-block">
                 <h2>Understanding the problem</h2>
-                <p>Talk about how after I created a research method/requirements.</p>
+                <p>After reviewing each participants answers, as well as conducting a Heuristic Analysis on the app myself, I discovered 3 reoccurring pain points.</p>
                 <ul>
-                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nemo modi maiores dicta necessitatibus esse.</li>
-                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, repellat. Eveniet.</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est ipsam magni eveniet explicabo!</li>
+                    <li><p>Individuals were frustrated by having to click the back arrow multiple times to return to a main page, as opposed to a standard single click Home button</p></li>
+                    <li><p>Individuals did not like that there isn't an easy way to undo an undesired action such as deleting an item from the cart by mistake. This means the user would have to manually find the item again and place it back in the cart, as opposed to simply clicking "undo"</p></li>
+                    <li><p><span>There is little transparency regarding checkout fees until the very end of your shopping journey.</span></p></li>
                 </ul>
             </div> 
             
         </section>
-        <section class="page-section case-study">
-            <h2>Proposed solution</h2>
-            <p>here, outline the flow i chose to focus on. </p>
-            <ul>
-                <li>Lorem ipsum dolor sit amet consectetur.</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, perspiciatis?</li>
-                <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum temporibus explicabo corporis est aliquam doloremque!</li>
-                <li>Lorem ipsum dolor sit amet consectetur.</li>
-            </ul>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo odio consectetur officiis odit excepturi beatae dignissimos velit provident tempora delectus!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae magni quis quibusdam facilis aperiam repudiandae sint est iste natus ipsum?</p>
+        <section class="page-section">
+            <div>
+                <h2>Proposed solution</h2>
+                <p>I chose to focus on the checkout fees pain point - I felt I could make the most impact by improving this flow. My main goals while working on this flow were:</p>
+                <ul>
+                    <li>I wanted users to have significant information available to them immediately into their shopping journey</li>
+                    <li>I wanted full transparency around checkout fees</li>
+                    <li>I wanted users to be confident in the Instacart platform to improve customer retention</li>
+                </ul>
+                <p>As a starting point, I began creating prototypes of how I envisioned my goals to pan out. Check them out <a href="#prototypes" class="js-scroll-trigger link">below</a>.</p>
+            </div>
         </section>
-        <section class="page-section case-study">
-            <h2>Designs</h2>
-            <p>show a list of photos from my paper prototypes then maybe a button to the digital prottype</p>
+        <section class="page-section">
+            <div class="colour-block" id="prototypes">
+                <h2>Designs</h2>
+                <p>show a list of photos from my paper prototypes then maybe a button to the digital prottype</p>
+                <div class="prototype-images mt-5">
+                    <div class="prototype-image-container mb-5 col-12">
+                        <h5>Landing Page Screen</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <img class="d-flex prototype-image rough m-auto" src="assets/img/PaperPrototypeRough.png" alt=""/>
+                    </div>
+                    <div class="prototype-image-container mb-5 col-12">
+                        <h5>Proposed Flow</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <img class="d-flex prototype-image final m-auto" src="assets/img/PaperPrototypeFinal.png" alt=""/>
+                    </div>
+                    <div class="prototype-image-container mb-5 col-12">
+                        <h5>Digital Prototype</h5>
+                        <p>I created an interactive, digital prototype based on my paper protptype - see it <span>
+                            <a href="https://www.figma.com/proto/gEgUFGYCJms95PQxgWbAa8/Hi-Fi?node-id=5%3A9&scaling=min-zoom" class="link" target="_blank">here</a>
+                        </span>.</p>
+                        <img class="d-flex prototype-image final m-auto" src="assets/img/prototypeDigital.png" alt=""/>
+                    </div>
+                </div>
+            </div>            
         </section>
-        <section class="page-section case-study">
-            <h2>Usability testing/results & takeaways</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+        <section class="page-section">
+            <div>
+                <h2>Usability testing results</h2>
+                <p>I conducted a second round of usability testing; this time, taking them through a series of task basked instructions while they interacted with my prototype. My participants were chosen at random, in a remote, moderated session, each lasting about 13 minutes in length.</p>
+                <p>My findings from the second round of testing are outlined below:</p>
+                <ul>
+                    <li>
+                        100% of users were confident in what fees they were paying for prior to reaching the final checkout page due to having that information accessible on a store’s landing page
+                    </li>
+                    <li>
+                        100% of users were surprised at the placement of the Checkout Fees and More Info button on the home page, and felt it looked more like simple information rather than an actual link
+                    </li>
+                </ul>
+                <p>In summary, both users appreciated learning about checkout fees early in their shopping journey, but may not have found this important information on their own, with the flow I had created</p>
+            </div>
         </section>
-        <!-- <footer class="footer text-center mt-xl-12" id="footer">
+        <section class="page-section">
+            <div class="colour-block">
+                <h2>Key Takeaways & Recommendations</h2>
+                <p>My second round of testing uncovered two key points.</p>
+                <p>First, having important information like checkout fees directly on a stores landing page, as opposed to only on the last page of the shopping journey, improved customer trust and confidence in shopping on Instacart by 100%. My participants agreed that they felt much more knowedgeable and comfortable with what fees they were paying by having the ability to access a breakdown of that information so early into their shopping.</p>
+                <p>However, my second key finding was that I failed to provide the most effective way for a customer to find this important information. I chose to place a link to checkout fees directly under a store's logo under <span>More Info</span>, but both participants felt that it did not 'feel' like a clickable link, and initially thought the link was simply general - unclickable - information.</p>
+                <p>If I were to move forward on this study, my next step would be to consider these options:</p>
+                <ul>
+                    <li>Return to the drawing board and find a better location within the store's landing page to place a link for checkout fee information</li>
+                    <li>Place a tooltip that would show up on a first visit, indicating to a user that they can find more information by clicking on that link</li>
+                    <li>Add an interative guided tour where I would point out the link to the user on their first visit</li>
+                </ul>
+                <p>In summary, I found many pieces of important and interesting information while conducting the entirety of this study. I do believe that I found an effective resolution to a known pain point that would be worth it to implement on the condition that further testing be conducted to find the best spot to place a link to checkout fees.</p>
+            </div>            
+        </section>
+        <footer class="footer text-center mt-5" id="footer">
             <div class="container">
                 <h4 class="text-uppercase mb-4">Let's Connect</h4>
                 <div>
@@ -146,7 +172,7 @@
                     </a>
                 </div>
             </div>
-        </footer> -->
+        </footer>
         <div class="scroll-to-top d-lg-none position-fixed">
             <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top"><i class="fa fa-chevron-up"></i></a>
         </div>
