--- a/index.html
+++ b/index.html
@@ -19,23 +19,20 @@
     </head>
     <body id="page-top" class="body">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg text-uppercase fixed-top py-2" id="mainNav">
+        <nav class="navbar d-none d-md-flex navbar-expand-md  text-uppercase fixed-top py-2" id="mainNav">
             <div class="container">
                 <a class="navbar-brand js-scroll-trigger" href="#page-top">katie brouwers</a>
-                <button class="navbar-toggler navbar-toggler-right text-uppercase rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
-                    <i class="fas fa-bars ml-1"></i>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
+                <div>
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="#about">About</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="about.html">About</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="#work">Projects</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="#footer">Contact</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <header class="masthead">
+
+        <header class="masthead px-2">
             <h1>I'm Katie.</h1><h2> I am a UX Designer <span>&</span> Developer with 3+ years experience <span>&</span> a passion for designing <span>&</span> building meaningful, functional, <span>&</span> accessible experiences.</h2>
             <a href="#work" class="scroll-btn js-scroll-trigger">
                 <button type="button" class="btn btn-lg button">
@@ -46,65 +43,65 @@
                 </button>
             </a>
         </header>
-        <section class="page-section card-section" id="work">
+        <section class="page-section card-section mt-3 mt-md-0" id="work">
             <h3>My work</h3>
             <div class="cards d-flex flex-column mt-5 mb-5">
 
                 <a href="instacart.html">
-                    <div class="card" style="width: 100%;">
-                        <div class="card-body blue">
+                    <div class="card work" style="width: 100%;">
+                        <div class="card-body work blue">
                             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-cart3" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm7 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
                               </svg>
                         </div>
-                        <h5 class="card-title">Instacart</h5>
-                        <h6 class="card-subtitle">UX Research & Design</h6>
+                        <h5 class="card-title work">Instacart</h5>
+                        <h6 class="card-subtitle work">UX Research & Design</h6>
                     </div>
                 </a>
             </div>
-            <div class="cards d-flex">
+            <div class="cards bottom d-flex flex-wrap">
                 <a href="http://leafi.herokuapp.com/" target="_blank">
-                    <div class="card" style="width: 18rem;">
-                        <div class="card-body yellow">
+                    <div class="card work" style="width: 18rem;">
+                        <div class="card-body work yellow">
                             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-tree" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" d="M8 0a.5.5 0 0 1 .416.223l3 4.5A.5.5 0 0 1 11 5.5h-.098l2.022 3.235a.5.5 0 0 1-.424.765h-.191l1.638 3.276a.5.5 0 0 1-.447.724h-11a.5.5 0 0 1-.447-.724L3.69 9.5H3.5a.5.5 0 0 1-.424-.765L5.098 5.5H5a.5.5 0 0 1-.416-.777l3-4.5A.5.5 0 0 1 8 0zM5.934 4.5H6a.5.5 0 0 1 .424.765L4.402 8.5H4.5a.5.5 0 0 1 .447.724L3.31 12.5h9.382l-1.638-3.276A.5.5 0 0 1 11.5 8.5h.098L9.576 5.265A.5.5 0 0 1 10 4.5h.066L8 1.401 5.934 4.5z"/>
                                 <path d="M7 13.5h2V16H7v-2.5z"/>
                               </svg>
                         </div>
-                        <h5 class="card-title">Leafi</h5>
-                        <h6 class="card-subtitle">Design & Development</h6>
+                        <h5 class="card-title work">Leafi</h5>
+                        <h6 class="card-subtitle work">Design & Development</h6>
                     </div>
                 </a>
                 
                 <a href="https://kaitlynbro.github.io/goribagency/" target="_blank">
-                    <div class="card" style="width: 18rem;">
-                        <div class="card-body blue">
+                    <div class="card work" style="width: 18rem;">
+                        <div class="card-body work blue">
                             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
                               </svg>
                         </div>
-                        <h5 class="card-title">Gorib</h5>
-                        <h6 class="card-subtitle">Development</h6>
+                        <h5 class="card-title work">Gorib</h5>
+                        <h6 class="card-subtitle work">Development</h6>
                     </div>
                 </a>
                 
                 <a href="http://writeaboutblog.herokuapp.com/" target="_blank">
-                    <div class="card" style="width: 18rem;">
-                        <div class="card-body yellow">
+                    <div class="card work" style="width: 18rem;">
+                        <div class="card-body work yellow">
                             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-journal-bookmark" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M3 0h10a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-1h1v1a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v1H1V2a2 2 0 0 1 2-2z"/>
                                 <path d="M1 5v-.5a.5.5 0 0 1 1 0V5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0V8h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0v.5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1z"/>
                                 <path fill-rule="evenodd" d="M6 8V1h1v6.117L8.743 6.07a.5.5 0 0 1 .514 0L11 7.117V1h1v7a.5.5 0 0 1-.757.429L9 7.083 6.757 8.43A.5.5 0 0 1 6 8z"/>
                               </svg>
                         </div>
-                        <h5 class="card-title">writeAbout</h5>
+                        <h5 class="card-title work">writeAbout</h5>
                         <h6 class="card-subtitle">Design & Development</h6>
                     </div>
                 </a>
 
             </div>
         </section>
-        <footer class="footer text-center mt-5" id="footer">
+        <footer class="footer text-center my-5" id="footer">
             <div class="container">
                 <h3 class="text-uppercase mb-4">Let's Connect</h3>
                 <div>
@@ -117,6 +114,15 @@
                 </div>
             </div>
         </footer>
+        <nav class="mobile navbar d-md-none text-uppercase py-2" id="mainNav">
+            <div class="container">
+                <ul class="d-flex">
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="about.html">About</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="#work">Projects</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="#footer">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
         <div class="scroll-to-top d-lg-none position-fixed">
             <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top"><i class="fa fa-chevron-up"></i></a>
         </div>
