--- a/about.html
+++ b/about.html
@@ -19,26 +19,27 @@
     </head>
     <body id="page-top" class="body">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg text-uppercase fixed-top py-2" id="mainNav">
+        <nav class="navbar d-none d-md-flex navbar-expand-md  text-uppercase fixed-top py-2" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="index.html">katie brouwers</a>
-                <button class="navbar-toggler navbar-toggler-right text-uppercase rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
-                    <i class="fas fa-bars ml-1"></i>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
+                <a class="navbar-brand js-scroll-trigger" href="#page-top">katie brouwers</a>
+                <div>
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="#about">About</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="about.html">About</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="#work">Projects</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="#footer">Contact</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
+
         <section class="page-section about-section top" id="about">
-            <div class="portrait-container d-flex align-center justify-content-center">
-                <div class="portrait one col-3"></div>
-                <div class="portrait two col-3"></div>
+            <div class="d-flex flex-column flex-md-row align-center justify-content-center">
+                <div class="portrait-container one col-12 col-md-4">
+                    <img class="portrait" src="assets/img/portraitCropped.png" alt=""/>
+                </div>
+                <div class="portrait-container two col-12 col-md-4">
+                    <img class="portrait" src="assets/img/portrait1.png" alt=""/>
+                </div>
             </div>
             
             <div class="d-flex flex-column align-center mt-5">
@@ -142,7 +143,7 @@
                 </p>
             </div>
         </section>
-        <footer class="footer text-center mt-5" id="footer">
+        <footer class="footer text-center my-5" id="footer">
             <div class="container">
                 <h3 class="text-uppercase mb-4">Let's Connect</h3>
                 <div>
@@ -155,6 +156,15 @@
                 </div>
             </div>
         </footer>
+        <nav class="mobile navbar d-md-none text-uppercase py-2" id="mainNav">
+            <div class="container">
+                <ul class="d-flex">
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="about.html">About</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="#work">Projects</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="#footer">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
         <div class="scroll-to-top d-lg-none position-fixed">
             <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top"><i class="fa fa-chevron-up"></i></a>
         </div>
