--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         </nav>
 
-        <header class="masthead px-2">
+        <header class="masthead px-lg-2">
             <h1>I'm Katie.</h1><h2> I am a UX Designer <span>&</span> Developer with 3+ years experience <span>&</span> a passion for designing <span>&</span> building meaningful, functional, <span>&</span> accessible experiences.</h2>
             <a href="#work" class="scroll-btn js-scroll-trigger">
                 <button type="button" class="btn btn-lg button">
@@ -61,7 +61,7 @@
             </div>
             <div class="cards bottom d-flex flex-wrap">
                 <a href="http://leafi.herokuapp.com/" target="_blank">
-                    <div class="card work" style="width: 18rem;">
+                    <div class="card work" style="width: 100%;">
                         <div class="card-body work yellow">
                             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-tree" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" d="M8 0a.5.5 0 0 1 .416.223l3 4.5A.5.5 0 0 1 11 5.5h-.098l2.022 3.235a.5.5 0 0 1-.424.765h-.191l1.638 3.276a.5.5 0 0 1-.447.724h-11a.5.5 0 0 1-.447-.724L3.69 9.5H3.5a.5.5 0 0 1-.424-.765L5.098 5.5H5a.5.5 0 0 1-.416-.777l3-4.5A.5.5 0 0 1 8 0zM5.934 4.5H6a.5.5 0 0 1 .424.765L4.402 8.5H4.5a.5.5 0 0 1 .447.724L3.31 12.5h9.382l-1.638-3.276A.5.5 0 0 1 11.5 8.5h.098L9.576 5.265A.5.5 0 0 1 10 4.5h.066L8 1.401 5.934 4.5z"/>
@@ -74,7 +74,7 @@
                 </a>
                 
                 <a href="https://kaitlynbro.github.io/goribagency/" target="_blank">
-                    <div class="card work" style="width: 18rem;">
+                    <div class="card work" style="width: 100%;">
                         <div class="card-body work blue">
                             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
@@ -86,7 +86,7 @@
                 </a>
                 
                 <a href="http://writeaboutblog.herokuapp.com/" target="_blank">
-                    <div class="card work" style="width: 18rem;">
+                    <div class="card work" style="width: 100%;">
                         <div class="card-body work yellow">
                             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-journal-bookmark" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M3 0h10a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-1h1v1a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v1H1V2a2 2 0 0 1 2-2z"/>
