--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Katie Brouwers  - UX Designer, Front-End Developer</title>
+        <title>Katie Brouwers  - Designer, Front-End Developer</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -33,7 +33,7 @@
         </nav>
 
         <header class="masthead px-lg-2">
-            <h1>I'm Katie.</h1><h2> I am a UX Designer <span>&</span> Developer with 3+ years experience <span>&</span> a passion for designing <span>&</span> building meaningful, functional, <span>&</span> accessible experiences.</h2>
+            <h1>I'm Katie.</h1><h2> I am a Designer <span>&</span> Developer with 3+ years experience <span>&</span> a passion for designing <span>&</span> building meaningful, functional, <span>&</span> accessible experiences.</h2>
             <a href="#work" class="scroll-btn js-scroll-trigger">
                 <button type="button" class="btn btn-lg button">
                     See my work
