--- a/instacart.html
+++ b/instacart.html
@@ -38,7 +38,7 @@
         <section class="page-section case-study" id="overview">
             <h1 class="mb-5">Instacart</h1>
             <div class="overview-content d-flex justify-content-between">
-                <div class="main col-8 p-0">
+                <div class="main col-7 p-0">
                     <h6>Overview</h6>
                     <p>
                         Instacart is an American company that has branched out to Canadian stores, providing a grocery delivery and pick-up service. 
@@ -51,17 +51,27 @@
                         <button type="button" class="btn button">See Prototype</button>
                     </a>
                 </div>
-                <div class="sidebar col-3 p-0">
-                    <ul class="pa-0">
+                <div class="sidebar col-4 p-0">
+                    <ul class="p-0">
                         <h6>Go To</h6>
                         <li>
-                            <a href="#background" class="js-scroll-trigger">background</a>
+                            <a href="#background" class="js-scroll-trigger">Background</a>
                         </li>
-                        <li>key findings</li>
-                        <li>product vision</li>
-                        <li>designs</li>
-                        <li>key findings</li>
-                        <li>results & takeaways</li>
+                        <li>
+                            <a href="#understandingProblem" class="js-scroll-trigger">Understanding the Problem</a>
+                        </li>
+                        <li>
+                            <a href="#proposedSolution" class="js-scroll-trigger">Proposed Solution</a>
+                        </li>
+                        <li>
+                            <a href="#designs" class="js-scroll-trigger">Designs</a>
+                        </li>
+                        <li>
+                            <a href="#results" class="js-scroll-trigger">Usability Testing Results</a>
+                        </li>
+                        <li>
+                            <a href="#keyTakeaways" class="js-scroll-trigger">Key Takeaways & Recommendations</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -81,7 +91,7 @@
             </div>
         </section>
         <section class="page-section"> 
-            <div class="mx-auto colour-block">
+            <div class="mx-auto colour-block" id="understandingProblem">
                 <h2>Understanding the problem</h2>
                 <p>After reviewing each participants answers, as well as conducting a Heuristic Analysis on the app myself, I discovered 3 reoccurring pain points.</p>
                 <ul>
@@ -93,7 +103,7 @@
             
         </section>
         <section class="page-section">
-            <div>
+            <div id="proposedSolution">
                 <h2>Proposed solution</h2>
                 <p>I chose to focus on the checkout fees pain point - I felt I could make the most impact by improving this flow. My main goals while working on this flow were:</p>
                 <ul>
@@ -105,7 +115,7 @@
             </div>
         </section>
         <section class="page-section">
-            <div class="colour-block" id="prototypes">
+            <div class="colour-block" id="designs">
                 <h2>Designs</h2>
                 <p>show a list of photos from my paper prototypes then maybe a button to the digital prottype</p>
                 <div class="prototype-images mt-5">
@@ -130,7 +140,7 @@
             </div>            
         </section>
         <section class="page-section">
-            <div>
+            <div id="results">
                 <h2>Usability testing results</h2>
                 <p>I conducted a second round of usability testing; this time, taking them through a series of task basked instructions while they interacted with my prototype. My participants were chosen at random, in a remote, moderated session, each lasting about 13 minutes in length.</p>
                 <p>My findings from the second round of testing are outlined below:</p>
@@ -146,7 +156,7 @@
             </div>
         </section>
         <section class="page-section">
-            <div class="colour-block">
+            <div class="colour-block" id="keyTakeaways">
                 <h2>Key Takeaways & Recommendations</h2>
                 <p>My second round of testing uncovered two key points.</p>
                 <p>First, having important information like checkout fees directly on a stores landing page, as opposed to only on the last page of the shopping journey, improved customer trust and confidence in shopping on Instacart by 100%. My participants agreed that they felt much more knowedgeable and comfortable with what fees they were paying by having the ability to access a breakdown of that information so early into their shopping.</p>
