--- a/about.html
+++ b/about.html
@@ -169,8 +169,12 @@
             <div class="container">
                 <ul class="d-flex">
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="about.html">About</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="#work">Projects</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="#footer">Contact</a></li>
+                    <li class="nav-item mx-0 mx-lg-1">
+                        <a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="index.html#work">Projects</a>
+                    </li>
+                    <li class="nav-item mx-0 mx-lg-1">
+                        <a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="#footer">Contact</a>
+                    </li>
                 </ul>
             </div>
         </nav>
