--- a/instacart.html
+++ b/instacart.html
@@ -17,28 +17,31 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
-    <body id="page-top casestudy" class="body">
+    <body id="page-top casestudy p-2" class="body">
+        <div class="back-home d-md-none pt-3 px-3 pb-0">
+            <a href="index.html">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-return-left" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" d="M14.5 1.5a.5.5 0 0 1 .5.5v4.8a2.5 2.5 0 0 1-2.5 2.5H2.707l3.347 3.346a.5.5 0 0 1-.708.708l-4.2-4.2a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 8.3H12.5A1.5 1.5 0 0 0 14 6.8V2a.5.5 0 0 1 .5-.5z"/>
+                  </svg>
+            </a>
+        </div>
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg text-uppercase fixed-top py-2" id="mainNav">
+        <nav class="navbar d-none d-md-flex navbar-expand-md  text-uppercase fixed-top py-2" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="index.html">katie brouwers</a>
-                <button class="navbar-toggler navbar-toggler-right text-uppercase rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
-                    <i class="fas fa-bars ml-1"></i>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
+                <a class="navbar-brand js-scroll-trigger" href="#page-top">katie brouwers</a>
+                <div>
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="index.html">About</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="#projects">Projects</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="about.html">About</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="#work">Projects</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="#footer">Contact</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <section class="page-section case-study" id="overview">
-            <h1 class="mb-5">Instacart</h1>
-            <div class="overview-content d-flex justify-content-between">
-                <div class="main col-7 p-0">
+        <section class="page-section case-study px-4 p-xl-0 mb-1" id="overview">
+            <h1 class="mb-xl-5">Instacart</h1>
+            <div class="overview-content d-flex flex-column flex-xl-row justify-content-between">
+                <div class="main col-12 col-xl-7 p-0 mb-3 mb-xl-0">
                     <h6>Overview</h6>
                     <p>
                         Instacart is an American company that has branched out to Canadian stores, providing a grocery delivery and pick-up service. 
@@ -51,7 +54,7 @@
                         <button type="button" class="btn button">See Prototype</button>
                     </a>
                 </div>
-                <div class="sidebar col-4 p-0">
+                <div class="sidebar col-12 col-xl-4 p-0">
                     <ul class="p-0">
                         <h6>Go To</h6>
                         <li>
@@ -76,12 +79,12 @@
                 </div>
             </div>
         </section>
-        <section class="page-section">  
+        <section class="page-section mb-1">  
             <div class="text-center colour-block">
                 <h3 class="quote">Here is an interesting quote about something really cool.</h3>
             </div>
         </section>
-        <section class="page-section">
+        <section class="page-section p-4 p-xl-0 mb-1">
             <div class="background-content" id="background">
                 <h2>Background</h2>
                 <p>When I decided to do a UX case study on Instacart, my intent was to learn if individuals find the flow of <span>   research - select - buy</span> to work as expected, and in turn, uncover how/if this flow can be improved upon.</p>
@@ -90,7 +93,7 @@
                 <p>I conducted my usability testing on 6 participants - 3 who had used the app before, and 3 who had not, and had them complete a series of task-based instructions.</p>
             </div>
         </section>
-        <section class="page-section"> 
+        <section class="page-section  mb-1"> 
             <div class="mx-auto colour-block" id="understandingProblem">
                 <h2>Understanding the problem</h2>
                 <p>After reviewing each participants answers, as well as conducting a Heuristic Analysis on the app myself, I discovered 3 reoccurring pain points.</p>
@@ -102,7 +105,7 @@
             </div> 
             
         </section>
-        <section class="page-section">
+        <section class="page-section p-4 p-xl-0 mb-1">
             <div id="proposedSolution">
                 <h2>Proposed solution</h2>
                 <p>I chose to focus on the checkout fees pain point - I felt I could make the most impact by improving this flow. My main goals while working on this flow were:</p>
@@ -114,7 +117,7 @@
                 <p>As a starting point, I began creating prototypes of how I envisioned my goals to pan out. Check them out <a href="#prototypes" class="js-scroll-trigger link">below</a>.</p>
             </div>
         </section>
-        <section class="page-section">
+        <section class="page-section mb-1">
             <div class="colour-block" id="designs">
                 <h2>Designs</h2>
                 <p>show a list of photos from my paper prototypes then maybe a button to the digital prottype</p>
@@ -139,7 +142,7 @@
                 </div>
             </div>            
         </section>
-        <section class="page-section">
+        <section class="page-section p-4 p-xl-0 mb-1">
             <div id="results">
                 <h2>Usability testing results</h2>
                 <p>I conducted a second round of usability testing; this time, taking them through a series of task basked instructions while they interacted with my prototype. My participants were chosen at random, in a remote, moderated session, each lasting about 13 minutes in length.</p>
@@ -155,7 +158,7 @@
                 <p>In summary, both users appreciated learning about checkout fees early in their shopping journey, but may not have found this important information on their own, with the flow I had created</p>
             </div>
         </section>
-        <section class="page-section">
+        <section class="page-section mb-1">
             <div class="colour-block" id="keyTakeaways">
                 <h2>Key Takeaways & Recommendations</h2>
                 <p>My second round of testing uncovered two key points.</p>
@@ -170,11 +173,11 @@
                 <p>In summary, I found many pieces of important and interesting information while conducting the entirety of this study. I do believe that I found an effective resolution to a known pain point that would be worth it to implement on the condition that further testing be conducted to find the best spot to place a link to checkout fees.</p>
             </div>            
         </section>
-        <footer class="footer text-center mt-5" id="footer">
+        <footer class="footer text-center my-5" id="footer">
             <div class="container">
-                <h4 class="text-uppercase mb-4">Let's Connect</h4>
+                <h3 class="text-uppercase mb-4">Let's Connect</h3>
                 <div>
-                    <a href="www.linkedin.com/in/katie-brouwers" target="_blank">
+                    <a href="https://linkedin.com/in/katie-brouwers" target="_blank">
                         <svg height="682pt" viewBox="-21 -35 682.66669 682" width="682pt" xmlns="http://www.w3.org/2000/svg"><path d="m77.613281-.667969c-46.929687 0-77.613281 30.816407-77.613281 71.320313 0 39.609375 29.769531 71.304687 75.8125 71.304687h.890625c47.847656 0 77.625-31.695312 77.625-71.304687-.894531-40.503906-29.777344-71.320313-76.714844-71.320313zm0 0"/><path d="m8.109375 198.3125h137.195313v412.757812h-137.195313zm0 0"/><path d="m482.054688 188.625c-74.011719 0-123.640626 69.546875-123.640626 69.546875v-59.859375h-137.199218v412.757812h137.191406v-230.5c0-12.339843.894531-24.660156 4.519531-33.484374 9.917969-24.640626 32.488281-50.167969 70.390625-50.167969 49.644532 0 69.5 37.851562 69.5 93.339843v220.8125h137.183594v-236.667968c0-126.78125-67.6875-185.777344-157.945312-185.777344zm0 0"/></svg>
                     </a>
                     <a href="mailto:kaitlynbrouwers@gmail.com">
@@ -183,6 +186,15 @@
                 </div>
             </div>
         </footer>
+        <nav class="mobile navbar d-md-none text-uppercase py-2" id="mainNav">
+            <div class="container">
+                <ul class="d-flex">
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="about.html">About</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="#work">Projects</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 mx-lg-3 js-scroll-trigger" href="#footer">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
         <div class="scroll-to-top d-lg-none position-fixed">
             <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top"><i class="fa fa-chevron-up"></i></a>
         </div>
