--- a/instacart.html
+++ b/instacart.html
@@ -120,19 +120,19 @@
         <section class="page-section mb-1">
             <div class="colour-block" id="designs">
                 <h2>Designs</h2>
-                <p>show a list of photos from my paper prototypes then maybe a button to the digital prottype</p>
+                <p>show a list of photos from my paper prototypes then maybe a button to the digital prototype</p>
                 <div class="prototype-images mt-5">
-                    <div class="prototype-image-container mb-5 col-12">
+                    <div class="prototype-image-container p-0 mb-5 col-12">
                         <h5>Landing Page Screen</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         <img class="d-flex prototype-image rough m-auto" src="assets/img/PaperPrototypeRough.png" alt=""/>
                     </div>
-                    <div class="prototype-image-container mb-5 col-12">
+                    <div class="prototype-image-container p-0 mb-5 col-12">
                         <h5>Proposed Flow</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         <img class="d-flex prototype-image final m-auto" src="assets/img/PaperPrototypeFinal.png" alt=""/>
                     </div>
-                    <div class="prototype-image-container mb-5 col-12">
+                    <div class="prototype-image-container p-0 mb-5 col-12">
                         <h5>Digital Prototype</h5>
                         <p>I created an interactive, digital prototype based on my paper protptype - see it <span>
                             <a href="https://www.figma.com/proto/gEgUFGYCJms95PQxgWbAa8/Hi-Fi?node-id=5%3A9&scaling=min-zoom" class="link" target="_blank">here</a>
